@@ -3,7 +3,9 @@ package org.codewith3h.finmateapplication.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.codewith3h.finmateapplication.dto.request.FeatureRequestDto;
+import org.codewith3h.finmateapplication.dto.request.FeatureSearchRequest;
 import org.codewith3h.finmateapplication.dto.response.FeatureResponse;
+import org.codewith3h.finmateapplication.dto.response.FeatureStatsResponse;
 import org.codewith3h.finmateapplication.entity.Feature;
 import org.codewith3h.finmateapplication.entity.PremiumPackage;
 import org.codewith3h.finmateapplication.entity.Subscription;
@@ -13,10 +15,14 @@ import org.codewith3h.finmateapplication.exception.ErrorCode;
 import org.codewith3h.finmateapplication.mapper.FeatureMapper;
 import org.codewith3h.finmateapplication.repository.FeatureRepository;
 import org.codewith3h.finmateapplication.repository.SubscriptionRepository;
+import org.codewith3h.finmateapplication.specification.FeatureSpecification;
+import org.springframework.data.crossstore.ChangeSetPersister;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -35,7 +41,7 @@ public class FeatureService {
 
         log.info("Fetching features");
         List<Feature> features = featureRepository.findByIsActiveTrue();
-        return features.stream().map(featureMapper::toResponseDto).toList();
+        return features.stream().map(featureMapper::toResponseDto).collect(Collectors.toList());
     }
 
     public FeatureResponse getFeatureById(Integer featureId){
@@ -101,6 +107,44 @@ public class FeatureService {
         Page<Feature> features = featureRepository.findByIsActive(status, pageable);
         return features.map(featureMapper::toResponseDto);
     }
+
+        public FeatureStatsResponse getFeatureStatistics(){
+            log.info("Fetching feature statistics");
+            List<Feature> features =  featureRepository.findAll();
+            int totalFeatures = features.size();
+            int totalIsActive = (int) features.stream().filter(Feature :: getIsActive).count();
+            return FeatureStatsResponse.builder()
+                    .activeFeatures(totalIsActive)
+                    .totalFeatures(totalFeatures)
+                    .build();
+        }
+
+        public Page<FeatureResponse> searchFeature(FeatureSearchRequest dto){
+            log.info("Searching feature");
+            Specification<Feature> spec = (root, query, criteriaBuilder)
+                    -> criteriaBuilder.conjunction();
+
+            if(dto.getIsActive() != null){
+                spec = spec.and(FeatureSpecification.hasActive(dto.getIsActive()));
+            }
+
+            if(dto.getFeatureName() != null){
+                spec = spec.and(FeatureSpecification.hasName(dto.getFeatureName()));
+            }
+
+            if(dto.getFeatureCode() != null){
+                spec = spec.and(FeatureSpecification.hasCode(dto.getFeatureCode()));
+            }
+
+            Sort sort = dto.getSortDirection().equalsIgnoreCase("DESC")
+                    ? Sort.by(dto.getSortBy()).descending()
+                    : Sort.by(dto.getSortBy()).ascending();
+
+            Pageable pageable = PageRequest.of(dto.getPage(), dto.getSize(), sort);
+            Page<Feature> features = featureRepository.findAll(spec, pageable);
+            log.info("page {}", features.getTotalElements());
+            return features.map(featureMapper :: toResponseDto);
+        }
 
 
 }
